# zoialib

./: .gitignore  README.md  pyproject.toml  zlib.py
zoialib/: __init__.py  __main__.py  file.py  prepare.py  rename.py
zolib/: __init__.py  __main__.py  prepare.py  rename.py
