[project]
name = "zoialib"
version = "0.5.0"
description = "A patch librarian for the Empress ZOIA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
    "rich>=14.1.0",
    "tomlkit>=0.13.3",
    "typer-slim>=0.19.2",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[project.scripts]
zoialib = "zoialib.__main__:app"
