[project]
name = "zoialib"
version = "0.6.0"
description = "ðŸ± A patch librarian for the Empress ZOIA ðŸ±"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
    "rich>=14.1.0",
    "tomlkit>=0.13.3",
    "typer-slim>=0.19.2",
    "types-pyyaml>=6.0.12.20250915",
]
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.13.2",
    "pytest>=8.4.2",
    "pyupgrade>=3.21.2",
    "ruff>=0.13.2",
    "ty>=0.0.14",
]

[project.scripts]
zoialib = "zoialib.__main__:app"

[tool.coverage]
[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.ruff.format]
quote-style = "single"
